fixed alignment issues in css

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -46,6 +46,7 @@ a:visited {
 
 .input-container {
   margin-top: 5px;
+  width:300px;
 }
 
 .button-container {
@@ -76,7 +77,7 @@ input[type="checkbox"] + label {
 .input-container > label {
   display: inline-block;
   clear: left;
-  width: 30%;
+  width: 35%;
   text-align: right;
 }
 
@@ -107,6 +108,12 @@ ul.user-info {
   list-style-type: circle;
   margin-left: 20px;
   padding: 0;
+}
+
+.sub-entry {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* Post a Song */
